// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/repository/update/pr/index ensurePr Update creates PR with pr data 1`] = `
"This PR contains the following updates:

| Package | Type | Update | Change |
|---|---|---|---|
| [six](http://sixlang.org) ([source](https://togithub.com/matthewrobb/six)) | dependencies | patch | [\`0.0.6\` -> \`0.0.12\`](https://renovatebot.com/diffs/npm/six/0.0.6/0.0.12) |

---

### Configuration

📅 **Schedule**: At any time (no schedule defined).

🚦 **Automerge**: Disabled by config. Please merge this manually once you are satisfied.

♻ **Rebasing**: Whenever PR becomes conflicted, or you tick the rebase/retry checkbox.

🔕 **Ignore**: Close this PR and you won't be reminded about this update again.

---

 - [ ] <!-- rebase-check -->If you want to rebase/retry this PR, click this checkbox.

---

This PR has been generated by [Renovate Bot](https://togithub.com/renovatebot/renovate).

<!--renovate-pr-data:eyJwckNyZWF0aW9uVmVyIjoiMC4wLjAtc2VtYW50aWMtcmVsZWFzZSIsInByVXBkYXRlVmVyIjoiMC4wLjAtc2VtYW50aWMtcmVsZWFzZSJ9-->
"
`;

exports[`workers/repository/update/pr/index ensurePr Update updates PR due to body change with pr data 1`] = `
"This PR contains the following updates:

| Package | Type | Update | Change |
|---|---|---|---|
| [six](http://sixlang.org) ([source](https://togithub.com/matthewrobb/six)) | dependencies | patch | [\`0.0.6\` -> \`0.0.12\`](https://renovatebot.com/diffs/npm/six/0.0.6/0.0.12) |

---

### Configuration

📅 **Schedule**: At any time (no schedule defined).

🚦 **Automerge**: Disabled by config. Please merge this manually once you are satisfied.

♻ **Rebasing**: Whenever PR becomes conflicted, or you tick the rebase/retry checkbox.

🔕 **Ignore**: Close this PR and you won't be reminded about this update again.

---

 - [ ] <!-- rebase-check -->If you want to rebase/retry this PR, click this checkbox.

---

This PR has been generated by [Renovate Bot](https://togithub.com/renovatebot/renovate).

<!--renovate-pr-data:eyJwckNyZWF0aW9uVmVyIjoieC55LnoiLCJwclVwZGF0ZVZlciI6IjAuMC4wLXNlbWFudGljLXJlbGVhc2UifQ==-->
"
`;

exports[`workers/repository/update/pr/index ensurePr Update updates PR due to body change without pr data 1`] = `
"This PR contains the following updates:

| Package | Type | Update | Change |
|---|---|---|---|
| [six](http://sixlang.org) ([source](https://togithub.com/matthewrobb/six)) | dependencies | patch | [\`0.0.6\` -> \`0.0.12\`](https://renovatebot.com/diffs/npm/six/0.0.6/0.0.12) |

---

### Configuration

📅 **Schedule**: At any time (no schedule defined).

🚦 **Automerge**: Disabled by config. Please merge this manually once you are satisfied.

♻ **Rebasing**: Whenever PR becomes conflicted, or you tick the rebase/retry checkbox.

🔕 **Ignore**: Close this PR and you won't be reminded about this update again.

---

 - [ ] <!-- rebase-check -->If you want to rebase/retry this PR, click this checkbox.

---

This PR has been generated by [Renovate Bot](https://togithub.com/renovatebot/renovate).

<!--renovate-pr-data:eyJwckNyZWF0aW9uVmVyIjoidW5rbm93biIsInByVXBkYXRlVmVyIjoiMC4wLjAtc2VtYW50aWMtcmVsZWFzZSJ9-->
"
`;
